--- a/launch/include/move_base/planner_local.yaml
+++ b/launch/include/move_base/planner_local.yaml
@@ -1,27 +1,35 @@
 DWAPlannerROS:
-  acc_lim_x: 1.5
-  acc_lim_y: 0.0
-  acc_lim_theta: deg(40)
-  max_vel_trans: 1.0
-  min_vel_trans: -0.1
-  max_vel_x: 1.0
-  min_vel_x: -1.0
+  max_vel_trans: 0.4
+  min_vel_trans: 0.0
+  max_vel_x: 0.4
+  min_vel_x: 0.0
   max_vel_y: 0.0
   min_vel_y: 0.0
-  max_vel_theta: deg(90)
+  max_vel_theta: deg(40)
   min_vel_theta: 0
-  theta_stopped_vel: 0.0
-  
-  yaw_goal_tolerance: 0.17
+  acc_lim_x: 0.4
+  acc_lim_y: 0.0
+  acc_lim_theta: deg(40)
+  acc_lim_trans: 0.1
+  prune_plan: true
   xy_goal_tolerance: 0.2
-  latch_xy_goal_tolerance: true
-  path_distance_bias: 10
-  goal_distance_bias: 10
-
+  yaw_goal_tolerance: 0.17
+  trans_stopped_vel: 0.1
+  theta_stopped_vel: 0.0
   sim_time: 3
   sim_granularity: 0.2
+  angular_sim_granularity: 0.1
+  path_distance_bias: 10
+  goal_distance_bias: 5
+  occdist_scale: 0.01
+  twirling_scale: 0.0
+  stop_time_buffer: 0.2
+  oscillation_reset_dist: 0.05
+  oscillation_reset_angle: 0.2
+  forward_point_distance: 0.325
+  scaling_speed: 0.25
+  max_scaling_factor: 0.2
   vx_samples: 10
+  vy_samples: 1
   vth_samples: 10
-
-  holonomic_robot: false
-  prune_plan: true
+  use_dwa: true
