--- a/launch/include/move_base/costmap_local.yaml
+++ b/launch/include/move_base/costmap_local.yaml
@@ -4,10 +4,9 @@ local_costmap:
   update_frequency: 3.0
   publish_frequency: 1.0
   static_map: false
-  inflation_radius: 0.4
   rolling_window: true
-  width: 5
-  height: 5
+  width: 3
+  height: 3
   resolution: 0.1
   plugins:
    - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
@@ -15,3 +14,6 @@ local_costmap:
   obstacle_layer:
     observation_sources: base_scan
     base_scan: { data_type: LaserScan, expected_update_rate: 2.0, observation_persistence: 0.0, marking: true, clearing: true}
+  inflation_layer:
+    inflation_radius: 0.3
+    cost_scaling_factor: 30.0
