--- a/launch/include/move_base/planner_local.yaml
+++ b/launch/include/move_base/planner_local.yaml
@@ -26,7 +26,7 @@ DWAPlannerROS:
   stop_time_buffer: 0.2
   oscillation_reset_dist: 0.05
   oscillation_reset_angle: 0.2
-  forward_point_distance: 0.325
+  forward_point_distance: 0.2 #0.325
   scaling_speed: 0.25
   max_scaling_factor: 0.2
   vx_samples: 10
