--- a/launch/include/move_base/move_base.yaml
+++ b/launch/include/move_base/move_base.yaml
@@ -7,8 +7,8 @@ planner_frequency: 0.0
 shutdown_costmaps: true 
 oscillation_timeout: 10.0
 oscillation_distance: 0.2
-recovery_behaviour_enabled: true
-clearing_rotation_allowed: true
+recovery_behaviour_enabled: false
+clearing_rotation_allowed: false
 conservative_reset:
   layer_names: ["obstacle_layer"]
 
