fix: launcher scripts

--- a/desktop/oit_capture.desktop
+++ b/desktop/oit_capture.desktop
@@ -3,6 +3,6 @@ Type=Application
 Version=1.0
 Name=capture
 Comment=oit_navigation_minibot_light_01 image capture
-Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && source ~/.bashrc && rosrun oit_navigation_minibot_light_01 image_capture.py"
+Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && rosrun oit_navigation_minibot_light_01 image_capture.py"
 Icon=oit_capture
 Terminal=true
