--- a/desktop/oit_devices.desktop
+++ b/desktop/oit_devices.desktop
@@ -3,6 +3,6 @@ Type=Application
 Version=1.0
 Name=devices
 Comment=oit_navigation_minibot_light_01 devices launcher
-Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && source ~/.bashrc && roslaunch oit_navigation_minibot_light_01 devices.launch use_rviz:=true"
+Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && roslaunch oit_navigation_minibot_light_01 devices.launch use_rviz:=true"
 Icon=oit_devices
 Terminal=true
