--- a/desktop/oit_ros_python2.desktop
+++ b/desktop/oit_ros_python2.desktop
@@ -5,4 +5,4 @@ Terminal=false
 Icon=application-default-icon
 Name=Exec ROS python2 script
 Comment=Exec ROS python2 script with double click
-Exec=xterm -hold -e "source /opt/ros/melodic/setup.bash; source ~/catkin_ws/devel/setup.bash; source ~/.bashrc; python %f"
+Exec=xterm -hold -e "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && python %f"
