--- a/desktop/oit_teleop.desktop
+++ b/desktop/oit_teleop.desktop
@@ -3,6 +3,6 @@ Type=Application
 Version=1.0
 Name=teleop
 Comment=oit_navigation_minibot_light_01 keyboard teleop
-Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && source ~/.bashrc && roslaunch oit_navigation_minibot_light_01 teleop.launch"
+Exec=bash -c "source /opt/ros/melodic/setup.bash && source ~/catkin_ws/devel/setup.bash && roslaunch oit_navigation_minibot_light_01 teleop.launch"
 Icon=oit_teleop
 Terminal=true
