--- a/launch/include/move_base/costmap_global.yaml
+++ b/launch/include/move_base/costmap_global.yaml
@@ -1,16 +1,23 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: 0.5
+  update_frequency: 1.0
   publish_frequency: 0.5
   rolling_window: false
   plugins:
-   - {name: static_layer, type: "costmap_2d::StaticLayer"}
-   - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-   - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+    - { name: static_layer, type: "costmap_2d::StaticLayer" }
+    - { name: obstacle_layer, type: "costmap_2d::ObstacleLayer" }
+    - { name: inflation_layer, type: "costmap_2d::InflationLayer" }
   obstacle_layer:
     observation_sources: base_scan
-    base_scan: { data_type: LaserScan, expected_update_rate: 0.5, observation_persistence: 0.0, marking: true, clearing: true}
+    base_scan:
+      {
+        data_type: LaserScan,
+        expected_update_rate: 5,
+        observation_persistence: 0.0,
+        marking: true,
+        clearing: true,
+      }
   inflation_layer:
-    inflation_radius: 0.5
+    inflation_radius: 0.4
     cost_scaling_factor: 10.0
