--- a/launch/include/move_base/costmap_local.yaml
+++ b/launch/include/move_base/costmap_local.yaml
@@ -1,7 +1,7 @@
 local_costmap:
   global_frame: odom
   robot_base_frame: base_link
-  update_frequency: 3.0
+  update_frequency: 5
   publish_frequency: 1.0
   static_map: false
   rolling_window: true
@@ -9,11 +9,18 @@ local_costmap:
   height: 3
   resolution: 0.1
   plugins:
-   - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-   - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+    - { name: obstacle_layer, type: "costmap_2d::ObstacleLayer" }
+    - { name: inflation_layer, type: "costmap_2d::InflationLayer" }
   obstacle_layer:
     observation_sources: base_scan
-    base_scan: { data_type: LaserScan, expected_update_rate: 2.0, observation_persistence: 0.0, marking: true, clearing: true}
+    base_scan:
+      {
+        data_type: LaserScan,
+        expected_update_rate: 5.0,
+        observation_persistence: 0.0,
+        marking: true,
+        clearing: true,
+      }
   inflation_layer:
-    inflation_radius: 0.3
-    cost_scaling_factor: 30.0
+    inflation_radius: 0.25
+    cost_scaling_factor: 10.0
