--- a/launch/include/move_base/planner_local.yaml
+++ b/launch/include/move_base/planner_local.yaml
@@ -2,34 +2,34 @@ DWAPlannerROS:
   max_vel_trans: 0.4
   min_vel_trans: 0.0
   max_vel_x: 0.4
-  min_vel_x: -0.1
+  min_vel_x: -0.05
   max_vel_y: 0.0
   min_vel_y: 0.0
   max_vel_theta: deg(40)
   min_vel_theta: 0
-  acc_lim_x: 0.6
+  acc_lim_x: 0.8
   acc_lim_y: 0.0
-  acc_lim_theta: deg(80)
-  acc_lim_trans: 0.1
+  acc_lim_theta: deg(120)
+  acc_lim_trans: 0.8
   prune_plan: true
   xy_goal_tolerance: 0.2
   yaw_goal_tolerance: deg(20)
-  trans_stopped_vel: 0.1
+  trans_stopped_vel: 0.0
   theta_stopped_vel: 0.0
   sim_time: 3
-  sim_granularity: 0.2
-  angular_sim_granularity: 0.1
-  path_distance_bias: 8 # 0.8
-  goal_distance_bias: 3 # 0.6
+  sim_granularity: 0.1
+  angular_sim_granularity: deg(5)
+  path_distance_bias: 24 # 0.8
+  goal_distance_bias: 18 # 0.6
   occdist_scale: 0.01
   twirling_scale: 0.0
   stop_time_buffer: 0.2
   oscillation_reset_dist: 0.05
-  oscillation_reset_angle: 0.2
+  oscillation_reset_angle: deg(15)
   forward_point_distance: 0.2 #0.325
   scaling_speed: 0.25
   max_scaling_factor: 0.2
-  vx_samples: 10
+  vx_samples: 3
   vy_samples: 1
-  vth_samples: 10
+  vth_samples: 21
   use_dwa: true
